# RAG-Chatbot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  rag_pipeline.py  server.py
prompts/: base.json
rag/: document_loader.py  embeddings.py  execution_chain.py  prompt.py  retriever.py  text_splitter.py
tests/: 001.py  002.py
utils/: format_docs.py  text_splitter.py
vectorstore/: index.faiss  index.pkl
